--- a/apps/sillok-user/index.html
+++ b/apps/sillok-user/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SillokUser</title>
+    <title>Sillok</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./src/assets/sillokLogo.svg"
-    />
+    <link rel="icon" type="image/x-icon" href="./src/assets/sillokLogo.svg" />
   </head>
   <body>
     <div id="root"></div>
